--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,23 @@
 	box-sizing: border-box;
 }
 
-html {
-    background-color: black;
+
+.conteiner {
+	height: 100vh;
+	background-color: black;
+    padding: 60px;
+}
+
+
+
+/**********
+ROW RULES
+****/
+
+.row {
+    background-color: blue;
+    width: 1820px;
+    height: 130px;
+    border: 2px dashed red;
+    margin-top: 10px;
 }
