--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,12 @@
 	box-sizing: border-box;
 }
 
-
+htnl {
+    background-color: black;
+}
 .conteiner {
-	height: 100vh;
 	background-color: black;
+    width: 100vw;
     padding: 60px;
 }
 
@@ -97,3 +99,65 @@ COL RULES
     color:white;
     font-size: 12px;
 }
+
+
+/**********
+FOOTER RULES
+****/
+
+footer {
+    background-color: rgb(39, 37, 37);
+    width: 100vw;
+    height: 77px;
+    margin-top: -20px;
+    display: flex;
+    padding: 10px;
+}
+
+.right {
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    margin-right: 5px;
+}
+
+.arrow {
+    color: white;
+    font-size: 15px;
+    padding: 10px;
+}
+
+.second_right{
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    margin-right: 5px;
+}
+
+/******
+PARTE CENTRALE FOOTER
+**/
+
+.center {
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+    display: flex;
+    position: relative;
+    left: 350px;
+    gap: 10px;
+    
+}
+
+.share {
+    color: rgb(45, 236, 45);
+}
+
+/******
+PARTE finale FOOTER
+**/
+
+
+
+
